allow for testing in a prometheus stack

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.1'
 services:
   web:
-    image: alerta/alerta-web
+    image: varlite/alerta-web:normalise-0.4
     # volumes:
       # - $PWD/config/config.json:/web/config.json
     ports:
@@ -9,14 +9,14 @@ services:
     depends_on:
       - db
     environment:
-      # - DEBUG=1  # remove this line to turn DEBUG off
+      - DEBUG=1  # remove this line to turn DEBUG off
       - DATABASE_URL=postgres://postgres:postgres@db:5432/monitoring
       - AUTH_REQUIRED=True
       - ADMIN_USERS=admin@alerta.io,devops@alerta.io
       - ADMIN_PASSWORD=super-secret # default is "alerta"
       - ADMIN_KEY=demo-key  # assigned to first user in ADMIN_USERS
       - ADMIN_KEY_MAXAGE=500
-      # - PLUGINS=remote_ip,reject,heartbeat,blackout,normalise,enhance
+      - PLUGINS=normalise
     restart: always
 
   db:
