--- a/examples/prometheus/config/alertmanager.yml
+++ b/examples/prometheus/config/alertmanager.yml
@@ -18,4 +18,4 @@ receivers:
     http_config:
       basic_auth: 
         username: admin@alerta.io
-        password: alerta
+        password: super-secret
