--- a/examples/prometheus/docker-compose.yml
+++ b/examples/prometheus/docker-compose.yml
@@ -12,16 +12,13 @@ services:
     ports:
       - 9090:9090
     restart: always
-    networks:
-      - promnet
 
   node:
     image: prom/node-exporter
     ports:
       - 9100:9100
     restart: always
-    networks:
-      - promnet
+
 
   alertmanager:
     image: prom/alertmanager
@@ -33,9 +30,7 @@ services:
       - '--storage.path=/data'
     ports:
       - 9093:9093
-    networks:
-      - alerta_sharednet
-      - promnet
+
 
   cadvisor:
     image: google/cadvisor
@@ -46,11 +41,35 @@ services:
       - /var/run:/var/run:rw
       - /sys:/sys:ro
       - /var/lib/docker/:/var/lib/docker:ro
-    networks:
-      - promnet
-      
-networks:
-  alerta_sharednet:
-    external: true
-  promnet:
-    driver: bridge
+
+
+  alerta:
+    image: varlite/alerta-web:files_baked_in
+    # volumes:
+      # - $PWD/config/config.json:/web/config.json
+      # - C:\Users\mchambers\git\alerta-contrib\plugins\normalise:/tmp/normalise
+      # - C:\Users\mchambers\Desktop\alerta-temp\files\prometheus.py:/usr/local/lib/python3.8/site-packages/alerta/webhooks/prometheus.py
+    ports:
+      - 8081:8080
+    depends_on:
+      - db
+    environment:
+      # - DEBUG=1  # remove this line to turn DEBUG off
+      - DATABASE_URL=postgres://postgres:postgres@db:5432/monitoring
+      # - AUTH_REQUIRED=True
+      # - ADMIN_USERS=admin@alerta.io,devops@alerta.io
+      # - ADMIN_PASSWORD=super-secret # default is "alerta"
+      # - ADMIN_KEY=demo-key  # assigned to first user in ADMIN_USERS
+      # - ADMIN_KEY_MAXAGE=500
+      # - PLUGINS=normalise
+    restart: always
+
+  db:
+    image: postgres
+    volumes:
+      - ./pg-data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_DB: monitoring
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    restart: always
