--- a/examples/prometheus/config/alertmanager.yml
+++ b/examples/prometheus/config/alertmanager.yml
@@ -16,6 +16,6 @@ receivers:
   - url: 'http://alerta:8080/api/webhooks/prometheus'
     send_resolved: true
     http_config:
-      basic_auth: 
-        username: admin@alerta.io
-        password: super-secret
+      authorization:
+        type: Key
+        credentials: demo-key
